# telegram-fruits

./: README.md  pyproject.toml
src/: __main__.py
src/config/: __init__.py  settings.py
src/dialogs/: __init__.py
src/dialogs/fruit/: __init__.py  keys.py
src/dialogs/fruit/windows/: create.py  detail.py  edit.py  select.py
src/handlers/commands/: __init__.py  start.py
src/handlers/errors/: __init__.py  error.py  unknown_intent.py
src/models/: fruit.py
src/services/: fruit.py
src/state/: fruit.py
src/utils/formatting/: error.py
