[project]
name = "telegram-fruits"
version = "0.1.0"
description = ""
authors = [{ name = "Nikita Gaziev", email = "zobweyt@gmail.com" }]
maintainers = [{ name = "Nikita Gaziev", email = "zobweyt@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.md" }
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0",
    "aiogram-dialog>=2.3.1",
    "mypy>=1.15.0",
    "pydantic>=2.10.6",
    "pydantic-core>=2.27.2",
    "pydantic-settings>=2.8.1",
    "ruff>=0.9.9",
]

[tool.mypy]
files = "src"
strict = true
ignore_missing_imports = true

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
